# duckdb-simulator

./: .gitignore  README.md  duckdb_simulator_repomix.txt  example.py  main.py  pyproject.toml
.github/workflows/: ci.yml
src/duckdb_executor/: __init__.py  executor.py  models.py  protocols.py  pytest_plugin.py  seeder.py  testing.py
src/duckdb_simulator/: __init__.py  executor.py  fixtures.py  pytest_plugin.py  seeder.py
tests/: conftest.py  test_executor.py  test_seeder.py  test_testing_toolkit.py
