[project]
name = "duckdb-simulator"
version = "0.1.0"
description = "A local SQL simulator mapped to Dataiku's SQLExecutor2 utilizing DuckDB and SQLGlot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "pandas>=3.0.1",
    "sqlglot>=29.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
