[project]
name = "duckdb-simulator"
version = "0.1.0"
description = "A local SQL simulator mapped to Dataiku's SQLExecutor2 utilizing DuckDB and SQLGlot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "pandas>=3.0.1",
    "sqlglot>=29.0.1",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "vulture>=2.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duckdb_executor"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
